fetch location from Cora Data

--- a/MyLocationUIKit/Base.lproj/Main.storyboard
+++ b/MyLocationUIKit/Base.lproj/Main.storyboard
@@ -379,7 +379,7 @@
         <!--Locations-->
         <scene sceneID="2lZ-bd-EID">
             <objects>
-                <tableViewController id="yX8-62-eCv" sceneMemberID="viewController">
+                <tableViewController id="yX8-62-eCv" customClass="LocationsViewController" customModule="MyLocationUIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="l1B-sy-432">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
