--- a/MyLocationUIKit/Base.lproj/Main.storyboard
+++ b/MyLocationUIKit/Base.lproj/Main.storyboard
@@ -431,7 +431,37 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pCL-fz-ovU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2029" y="973"/>
+            <point key="canvasLocation" x="3026.25" y="972.88732394366195"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="HuW-DZ-riY">
+            <objects>
+                <viewController id="yk3-eI-xdy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ykd-Rb-GNI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xjP-Aj-4ia">
+                                <rect key="frame" x="0.0" y="44" width="320" height="475"/>
+                            </mapView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="kMU-AB-ims"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="xjP-Aj-4ia" firstAttribute="leading" secondItem="kMU-AB-ims" secondAttribute="leading" id="3zI-zC-A2v"/>
+                            <constraint firstItem="xjP-Aj-4ia" firstAttribute="top" secondItem="kMU-AB-ims" secondAttribute="top" id="Ekj-p4-2QQ"/>
+                            <constraint firstItem="xjP-Aj-4ia" firstAttribute="trailing" secondItem="kMU-AB-ims" secondAttribute="trailing" id="LEl-pi-BLJ"/>
+                            <constraint firstItem="xjP-Aj-4ia" firstAttribute="bottom" secondItem="kMU-AB-ims" secondAttribute="bottom" id="efG-93-xaK"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Map" id="xTS-H9-abq">
+                        <barButtonItem key="leftBarButtonItem" title="Locations" id="8rU-hg-BhH"/>
+                        <barButtonItem key="rightBarButtonItem" title="User" id="chy-0y-zSC"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5pd-Qc-M1F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1031.25" y="955.9859154929577"/>
         </scene>
         <!--Locations-->
         <scene sceneID="OiJ-Hu-PfL">
@@ -448,7 +478,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ubg-Wa-qo4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="996" y="973"/>
+            <point key="canvasLocation" x="1993.125" y="972.88732394366195"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="bzT-Cv-hGO">
@@ -463,6 +493,7 @@
                     <connections>
                         <segue destination="rxD-y2-FEA" kind="relationship" relationship="viewControllers" id="dps-JW-d8h"/>
                         <segue destination="n7S-ZO-wfz" kind="relationship" relationship="viewControllers" id="Lzz-fa-0BH"/>
+                        <segue destination="ihk-IL-XAh" kind="relationship" relationship="viewControllers" id="0kp-iZ-hQh"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EUD-bk-Th3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -488,6 +519,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BEc-si-o9n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1204" y="89"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="AFq-XH-Au2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ihk-IL-XAh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Map" id="HVU-5H-rud"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0Zu-QW-9k4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="yk3-eI-xdy" kind="relationship" relationship="rootViewController" id="Nyc-uq-MGt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rvb-GV-ZG3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="33.75" y="955.9859154929577"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
