--- a/MyLocationUIKit/Base.lproj/Main.storyboard
+++ b/MyLocationUIKit/Base.lproj/Main.storyboard
@@ -436,13 +436,16 @@
         <!--Map-->
         <scene sceneID="HuW-DZ-riY">
             <objects>
-                <viewController id="yk3-eI-xdy" sceneMemberID="viewController">
+                <viewController id="yk3-eI-xdy" customClass="MapViewController" customModule="MyLocationUIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ykd-Rb-GNI">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xjP-Aj-4ia">
                                 <rect key="frame" x="0.0" y="44" width="320" height="475"/>
+                                <connections>
+                                    <outlet property="delegate" destination="ykd-Rb-GNI" id="SvB-L8-GQ8"/>
+                                </connections>
                             </mapView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="kMU-AB-ims"/>
@@ -455,9 +458,20 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Map" id="xTS-H9-abq">
-                        <barButtonItem key="leftBarButtonItem" title="Locations" id="8rU-hg-BhH"/>
-                        <barButtonItem key="rightBarButtonItem" title="User" id="chy-0y-zSC"/>
+                        <barButtonItem key="leftBarButtonItem" title="Locations" id="8rU-hg-BhH">
+                            <connections>
+                                <action selector="showLocations" destination="yk3-eI-xdy" id="z9a-Xs-ucj"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="User" id="chy-0y-zSC">
+                            <connections>
+                                <action selector="showUser" destination="yk3-eI-xdy" id="Eqm-tB-cSN"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="mapView" destination="xjP-Aj-4ia" id="1iT-iH-jdG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5pd-Qc-M1F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
