--- a/MyLocationUIKit/Base.lproj/Main.storyboard
+++ b/MyLocationUIKit/Base.lproj/Main.storyboard
@@ -444,7 +444,7 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xjP-Aj-4ia">
                                 <rect key="frame" x="0.0" y="44" width="320" height="475"/>
                                 <connections>
-                                    <outlet property="delegate" destination="ykd-Rb-GNI" id="SvB-L8-GQ8"/>
+                                    <outlet property="delegate" destination="yk3-eI-xdy" id="Fug-5g-9Ur"/>
                                 </connections>
                             </mapView>
                         </subviews>
